fixing integration_test
